--- a/test_4_codility.ipynb
+++ b/test_4_codility.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Author: Guillermo Santiago Aguilera Leon (Guillosanti) on 2021-11-24\n",
     "\"\"\"A non-empty array A consisting of N intergers is given. A slice of that array is any pair of integers (P, Q) such that 0 <= P <= Q < N.\n",
     "Interger P is called the beginning of the slice.\n",
     "Interger Q is called an end index of a slice.\n",
@@ -68,6 +69,7 @@
    "source": [
     "def solution(A):\n",
     "    # Write your code in Python 3.6\n",
+    "    # Created by Guillermo Santiago Aguilera Leon (Guillosanti) on 2021-11-24\n",
     "    total = []\n",
     "    output = []\n",
     "    total_index = []\n",
